# allocations

./: .env  .gitignore  Cargo.toml  Containerfile.rest
.sqlx/: query-32bccf0a27b1b96ce7f96b2bd4e4e0f777243fbc49c3c711546785b0add05082.json  query-3b57f042d928c29edd26fd36896e0b704515346fed9ce85a749fc707a28331a4.json  query-7222a137ac36a8e5fe1d556413bc806f789e584d6773ce0b9c66161d7cef48c5.json  query-91f6fbcd6b7cbcb10c9eeacbbab7bd29eea044a9beda32c7fdbde5c12640d7de.json  query-ec3a1247e924259ff6a22c4d2c31759ec05d218fe82f2cb3b6010ae842ff8723.json  query-f7889bcda2c3e2bc38b27840f4e1caba7f6839030008e32ba2b54407dcdb9643.json
domain/: Cargo.toml
domain/src/: dto.rs
migrations/: 20251122000000_init.sql
repository/: Cargo.toml
repository/src/: converters.rs  dao.rs  employee_errors.rs  employee_repo.rs  lib.rs  postgres_db.rs  roster_repo.rs
repository/tests/: employee_repo_tests.rs  roster_repo_tests.rs
rest/: Cargo.toml
rest/deployment/base/: deployment.yaml  service.yaml
rest/deployment/overlays/local/: kustomization.yaml  postgres-configmap.yaml  postgres-deployment.yaml
rest/src/: http.rs  main.rs
rest/src/http/: api.rs  employee_handlers.rs  roster_handlers.rs
rest/src/models/: employee.rs
service/: Cargo.toml
