[package]
name = "allocations-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
allocations-domain = { path = "../domain" }
allocations-repository = { path = "../repository/" }
allocations-service = { path = "../service/" }
anyhow = { workspace = true }
axum = { workspace = true }
chrono = "0.4.42"
derive_more = { workspace = true } 
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
